SalesforceProject2/src/objects/diz_test_relationship_fields__c.object
<CustomObject>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_formula6__c</fullName>
        <formula>&apos;abc&apos;</formula>
        <label>diz_formula6__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_formula__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>diz_formula__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_location__c</fullName>
        <label>diz_location__c</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist__c</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>diz_test_relationship_fields</label>
    <nameField>
        <label>diz_test_relationship_fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>diz_test_relationship_fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>